# Utility_Rate_calc

./: .gitignore  CLAUDE.md  VoltRegistry_v0_Spec.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_tariff_table.py  d44d08015185_initial_site_and_utility_tables.py  f7a9b2c1d3e4_add_tariff_url_and_inputs_tables.py
data/: puc_portals.json  territories.gpkg-journal  voltregistry.db-journal
docs/: JOURNAL.md
scripts/: bootstrap.py  coverage_report.py  demo.py  extract_tariff_inputs.py  ingest_urdb_bulk.py  reload_reference_tariffs.py  seed_tariff_urls.py
src/voltregistry/: __init__.py  db.py  models.py
src/voltregistry/api/: main.py
src/voltregistry/comparison/: compare.py
src/voltregistry/engine/: calculations.py  rules.py  tariff_engine.py
src/voltregistry/ingest/: eia_form_861.py  hifld_territories.py  samsclub_scraper.py  seed_data.py  urdb_client.py  urdb_to_bundle.py  walmart_scraper.py
src/voltregistry/load/: synthetic.py
src/voltregistry/mapping/: territory_join.py
src/voltregistry/tariffs/: classifier.py  eligibility.py  input_types.py  models.py
src/voltregistry/tariffs/reference/: duke_carolinas_lgs.json  entergy_ar_lgs1.json  fpl_gsld.json  georgia_power_lps.json  oncor_distr.json
tests/: test_eligibility.py  test_models.py  test_territory_join.py  test_urdb_adapter.py
tests/golden/: test_golden.py
