[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voltregistry"
version = "0.1.0"
description = "VoltRegistry — utility delivery charge mapping for the Walmart footprint"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.19",
    "sqlalchemy>=2.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voltregistry"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E402: scripts use sys.path.insert before imports — intentional
# B008: FastAPI Depends() in function signatures is the canonical pattern
ignore = ["E501", "E402", "B008"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
